[package]
name = "memonitor"
description = "Query CPU and GPU memory information in a portable way."
version = "0.1.1"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/edgenai/memonitor"
readme = "../../README.md"
edition = "2021"
publish = true

[dependencies]
memonitor-sys = { path = "../memonitor-sys", version = "0.1.1", default-features = false }
sysinfo = "0.30.7"

[features]
default = ["vulkan"]
vulkan = ["memonitor-sys/vulkan"]
